<resources>
    <string name="app_name">GithubTestApplication</string>

    <string name="system_preferences_file_name" translatable="false">user_profile_settings</string>
    <string name="try_again">try again</string>
    <string name="error_loading">Error loading</string>
    <string name="no_data">no data</string>
    <string name="creation_date">Creation date</string>
    <string name="last_modification_date">Last modification date</string>
    <string name="languages">Languages:</string>
    <string name="contributors">Contributors</string>
    <string name="for_start_search_input_any_char">For start search, input any char</string>
    <string name="radio_button_stars">Stars</string>
    <string name="radio_button_forks">Forks</string>
    <string name="radio_button_updated">updated</string>
</resources>